--- a/style.css
+++ b/style.css
@@ -11,24 +11,23 @@ body {
     margin: 1vh 1vw;
     padding: 1%;
     height: 95vh;
-    /* Adicionando flexbox para controle de layout */
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 #Logo-Caccal {
-    width: 20%;
+    width: 15vw;
     height: auto;
     margin-top: auto; /* Empurra a imagem para o final */
     margin-bottom: 20px; /* Espaço opcional no final */
 }
 
 .display {
-    font-size: 5vw;
+    font-size: 4vw;
     text-align: center;
-    margin: 30px 0px 20px 0px;
-    padding: 15px 0px;
+    margin: 1vh 0px 3vh 0px;
+    padding: 2vh 0px;
     color: #1b0020;
     border-radius: 10px;
 }
@@ -36,16 +35,17 @@ body {
     color: #28182b;
 }
 #Alert{
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bolder;
     font-size: 2vw;
-    background-color:  rgb(122, 1, 192);
-    color: rgb(255, 255, 255);
-    padding: 5px;
+    background-color:  rgb(255, 255, 255);
+    color: rgb(255, 103, 103);
 }
 .teclado {
-    padding: 10px;
-    margin-top: 20px;
-    width: 400px;
+    padding: 3vh 2vw;
+    margin-top: 2vh;
+    width: 40vw;
+    height: auto;
     border-radius: 15px;
     background-color: rgb(122, 1, 192);
 }
@@ -53,15 +53,14 @@ body {
 .teclas {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 5px;
+    gap: 1vh 1vw;
 }
 
 button {
     padding: 5px 5px;
-    margin: 7px;
-    font-size: 60px;
+    font-size: 6vh;
     border: none;
-    background: rgb(61, 0, 58);
+    background: #28182b;
     color: white;
     border-radius: 3px;
     cursor: pointer;
@@ -70,22 +69,22 @@ button {
 }
 
 button:hover {
-    background: rgb(153, 10, 146);
+    background: #704577;
 }
 
 .tecla-zero {
     grid-column: 1 / span 2;
 }
 
-.tecla-limpar {
-    background: #ff9999;
+.tecla-apagar {
+    background: #ff7b00;
 }
 
 .tecla-enviar {
-    background: #84009e;
+    background: #015e10;
     grid-column: 1 / span 3;
 }
 .tecla-enviar:hover {
-    background: #b301d6;
+    background: #1ad601;
     grid-column: 1 / span 3;
 }
